--- a/portfolio.html
+++ b/portfolio.html
@@ -117,12 +117,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-wrap filter-app">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/lima.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h3>App 1</h3>
-                <div>
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <h3>Ini lucuuu bangett </h3>
+                <div> 
                 </div>
               </div>
             </div>
